# gpu4pyscf

./: .gitignore  README.md  analysis.sh  build_sycl.sh  check_devicesyms.sh  devsyms.sh  link_exchcxx.sh  requirements.txt  setup.py  setup_sycl.py  test_cupy_dpnp_contig.py  test_cupy_dpnp_dataptr.py  test_dpnp_random.py  test_dpnp_strides.py  test_sycl_divzero.cpp  test_sycl_printf.cpp
.github/workflows/: pypi_wheel.yml
benchmarks/: README.md
benchmarks/cupy_helper/: benchmark_cutensor.py
benchmarks/scf/: NVIDIA GeForce RTX 2060 SUPER.csv  dft_driver.py
benchmarks/sycl_helper/: benchmark.py  benchmark_cart2sph.py
builder/: build_libxc.sh  setup_libxc.py
examples/: 02-h2o_geomopt.py  15-chelpg.py  16-smd_solvent.py  dft_driver.py
gpu4pyscf/: __config__.py  __init__.py  numint.diff  test.py
gpu4pyscf/cc/: ccsd_incore.py
gpu4pyscf/cupy/: __init__.py  __init__.py_old  cuda.py  (+4 more)
gpu4pyscf/lib/: CMakeLists.txt  __init__.py  cublas.py  cupy_helper.py  cusolver.py  cutensor.py  diis.py  dpnp_helper.py  dpnp_helper.py_orig  dpsolver.py  dptensor.py  logger.py  onemkl_lapack.py  utils.py
gpu4pyscf/lib/cupy_helper/: CMakeLists.txt  add_sparse.cu  async_d2h_2d.cu  block_diag.cu  cart2sph.cu  dist_matrix.cu  grouped_gemm.cu  sparse_cderi.cu  take_last2d.cu  transpose.cu  unpack.cu
gpu4pyscf/lib/dpnp_helper/: CMakeLists.txt  add_sparse.cpp  async_d2h_2d.cpp  block_diag.cpp  cart2sph.cpp  dist_matrix.cpp  grouped_dot.cpp  grouped_gemm.cpp  onemkl_lapack.cpp  sparse_cderi.cpp  take_last2d.cpp  transpose.cpp  unpack.cpp
gpu4pyscf/lib/ecp/: CMakeLists.txt  bessel.cu  common.cu  ecp.h  ecp_type1.cu  ecp_type1_ip.cu  ecp_type1_ipip.cu  ecp_type2.cu  ecp_type2_ip.cu  ecp_type2_ipip.cu  gauss_chebyshev.cu  nr_ecp_driver.cu  type2_ang_nuc.cu
gpu4pyscf/lib/gdft/: CMakeLists.txt  contract_rho.cpp  contract_rho.cu  contract_rho.cuh  contract_rho.hpp  exchcxx.cpp  exchcxx.h  gen_grids.cpp  gen_grids.cu  libxc.cu  libxc.cu.old  libxc.cu_old  nr_eval_gto.cpp  nr_eval_gto.cu  nr_eval_gto.cu_old  nr_eval_gto.cuh  nr_eval_gto.hpp  nr_numint_sparse.cpp  nr_numint_sparse.cu  vv10.cpp  vv10.cu  vv10.cu_old
gpu4pyscf/lib/gdft/gdft/: exchcxx.cpp  exchcxx.h
gpu4pyscf/lib/gint/: CMakeLists.txt  bpcache.cpp  bpcache.cu  cart2sph.cu  cint2e.cuh  cint2e.hpp  constant.cpp  constant.cu  constant.hpp  cuda_alloc.cuh  fill_ints.cpp  fill_ints.cu  g1e.cu  g1e_ip_root_1.cu  g1e_root_1.cu  g2e.cpp  g2e.cu  g2e_root1.cpp  g2e_root1.cu  g2e_root2.cpp  g2e_root2.cu  g2e_root3.cpp  g2e_root3.cu  g2e_root_n.cpp  g2e_root_n.cu  g3c1e.cu  g3c1e_ip.cu  g3c1e_ipip.cu  g3c2e.cpp  g3c2e.cu  g3c2e_ip1.cpp  g3c2e_ip1.cu  g3c2e_ip1_root1.cpp  g3c2e_ip1ip2.cpp  g3c2e_ip1ip2.cu  g3c2e_ip2.cpp  g3c2e_ip2.cu  g3c2e_ip2_root1.cpp  g3c2e_ipip1.cpp  g3c2e_ipip1.cu  (+41 more)
gpu4pyscf/lib/gint-rys/: CMakeLists.txt  fill_int3c2e.cu  fill_int3c2e_bdiv.cu  gint_driver.cu  int3c2e.cuh  unrolled_int3c2e.cu  unrolled_int3c2e_bdiv.cu
gpu4pyscf/lib/gsycl/: CMakeLists.txt  cuda_runtime.h  sycl_api_python.cpp  sycl_device.hpp
gpu4pyscf/lib/gsycl/cub/: cub.cuh
gpu4pyscf/lib/gvhf/: CMakeLists.txt  constant.cpp  constant.cu  constant.cuh  constant.hpp  contract_jk.cpp  contract_jk.cu  g2e.cpp  g2e.cu  g2e_get_veff_ip1.cpp  g2e_get_veff_ip1.cu  g2e_get_veff_ip1_root2.cpp  g2e_get_veff_ip1_root2.cu  g2e_ip1.cpp  g2e_ip1.cu  g2e_ip1_root2.cpp  g2e_ip1_root2.cu  g2e_ip1_root3.cpp  g2e_ip1_root3.cu  g2e_root2.cpp  g2e_root2.cu  g2e_root3.cpp  g2e_root3.cu  g3c2e.cuh  g3c2e.hpp  g3c2e_ip1.cpp  g3c2e_ip1.cu  g3c2e_ip2.cpp  g3c2e_ip2.cu  g3c2e_pass1.cpp  g3c2e_pass1.cu  g3c2e_pass1_root1.cpp  g3c2e_pass2.cpp  g3c2e_pass2.cu  g3c2e_pass2_root1.cpp  get_veff_driver_ip1.cpp  get_veff_driver_ip1.cu  gvhf.h  master_pass1.cu  nr_jk_driver.cpp  (+11 more)
gpu4pyscf/lib/gvhf-md/: CMakeLists.txt  contract_int3c2e.cu  md_contract_j.cu  md_indices.cu  md_j.cuh  md_j_driver.cu  md_pairdata.c  pbc_md_contract_j.cu  unrolled_md_j.cu  unrolled_md_j_4dm.cu
gpu4pyscf/lib/gvhf-rys/: CMakeLists.txt  contract_int3c2e.cu  count_tasks.cu  create_tasks.cu  create_tasks_ip1.cu  create_tasks_ip2.cu  ejk_int3c2e_ip1.cu  fill_int3c2e.cu  gamma_inc_unrolled.cu  mole_helper.cu  nr_sr_estimator.c  nr_sr_estimator.cu  rys_constant.cu  rys_contract_j.cu  rys_contract_jk.cu  rys_contract_jk_ip1.cu  rys_contract_jk_ip2.cu  rys_contract_k.cu  rys_contract_k.cuh  rys_jk_driver.cu  rys_roots.cu  rys_roots.cuh  rys_roots_dat.cu  rys_roots_for_k.cu  unrolled_ejk_int3c2e_ip1.cu  unrolled_ejk_ip1.cu  unrolled_ejk_ip2_type12.cu  unrolled_ejk_ip2_type3.cu  unrolled_int3c2e.cu  unrolled_os.cu  unrolled_rys.cu  unrolled_rys_ip1.cu  unrolled_rys_j.cu  unrolled_rys_jk.cu  unrolled_rys_jk_ip1.cu  unrolled_rys_k.cu  vhf.cuh
gpu4pyscf/lib/multigrid/: CMakeLists.txt  cart2xyz.cu  estimator.cu  eval_mat_gga.cu  eval_mat_lda.cu  eval_mat_tau.cu  eval_rho.cu  eval_tau.cu  loader.cu  mg_driver.cu  multigrid.cuh
gpu4pyscf/lib/multigrid/multigrid_v2/: cartesian.cuh  constant_objects.cuh  drivers.cu  eval_xc.cu  eval_xc_grad.cu  evaluation.cuh  gradient.cuh  screen.cu  screening.cuh
gpu4pyscf/lib/onemkl_helper/: CMakeLists.txt  onemkl_lapack.cpp
gpu4pyscf/lib/pbc/: CMakeLists.txt  contract_int3c2e.cu  create_tasks.cu  decompress.cu  ejk_int3c2e_ip1.cu  estimator.cu  fill_int2c2e.cu  fill_int2c2e_ip1.cu  fill_int3c2e.cu  fill_triu.cu  ft_ao.cu  ft_ao_ip1.cu  int3c2e.cuh  int3c2e_create_tasks.cuh  int3c2e_create_tasks_o1.cuh  nr_eval_gto.cu  overlap.cu  pbc.cuh  pbc_driver.cu  rys_contract_j.cu  rys_contract_jk_ip1.cu  rys_contract_k.cu  rys_roots_dat.cu  supmol_sr_estimator.cu  unrolled_ft_ao.cu  unrolled_int3c2e.cu  unrolled_rys_k.cu
gpu4pyscf/lib/sem/: CMakeLists.txt  eri_1c2e_kernel.cu  eri_2c2e_kernel.cu  fock.cu  grad_kernel.cu  ss_kernel.cu
gpu4pyscf/lib/solvent/: CMakeLists.txt  CMakeLists.txt_old  pcm.cpp  pcm.cu
gpu4pyscf/lib/syclpy_helper/: CMakeLists.txt  add_sparse.cu  async_d2h_2d.cpp  block_diag.cpp  cart2sph.cu  dist_matrix.cu  grouped_dot.cpp  grouped_gemm.cpp  sparse_cderi.cu  take_last2d.cpp  transpose.cu  unpack.cpp
gpu4pyscf/lib/tests/: test_cupy_helper.py  test_cusolver.py
(+131 files in other folders)
